tests/baselines/reference/undefinedTypeAssignment2.errors.txt
undefinedTypeAssignment2.ts(1,5): error TS2300: Duplicate identifier 'undefined'.


==== undefinedTypeAssignment2.ts (1 errors) ====
    var undefined = void 0;
        ~~~~~~~~~
!!! error TS2300: Duplicate identifier 'undefined'.
    